<resources>
    <string name="app_name">KS v1.2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_tables">TablesActivity</string>

    <!-- side-menu -->
    <string name="nav_dashboard">Übersicht</string>
    <string name="nav_tables">Tische</string>
    <string name="nav_products">Produkte</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_logout">Logout</string>
    <string name="please_login">Bitte einloggen</string>

    <!-- store-information-->
    <string name="auth_key">test321</string>

    <!-- table-overview-legend -->
    <string name="table_state_taken">besetzt</string>
    <string name="table_state_reserved">reserviert</string>
    <string name="table_state_free">frei</string>
    <string name="title_activity_table">TableActivity</string>

    <!-- add-table -->
    <string name="add_table">Tisch hinzufügen</string>

    <!-- add-table -->
    <string name="add_product">Produkt hinzufügen</string>

    <!-- change-table -->
    <string name="change_product">Produkt ändern</string>
    <string name="save_product">Sichern</string>
    <string name="delete_product">Löschen</string>
    <string name="abort_product">Abbruch</string>

    <!-- bon -->
    <string name="bon">Bon</string>
    <string name="ok">OK</string>

    <!-- ordered-list-item -->
    <string name="plus_minus">+/-</string>
    <string name="sum_pay_price">0.00</string>
    <string name="pay_button">Bezahlen</string>
    <string name="title_activity_product_groups">Produktgruppen</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_tables_settings">TablesSettingsActivity</string>

    <!-- essentials -->
    <string name="apply">anwenden</string>
    <string name="cancel">abbrechen</string>
    <string name="add">hinzufügen</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <!-- payment -->
    <string name="currency">€</string>
    <string name="all_selected">Alle</string>

    <!-- main_activity -->
    <string name="main_value">Bestellt</string>
    <string name="main_price">Erlös</string>
    <string name="year">Jahr</string>
    <string name="month">Monat</string>
    <string name="day">Tag</string>
    <string name="main_settings">Einstellung</string>
    <string name="main_table">Tische</string>
    <string name="main_product">Produkte</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Übersicht</string>
    <string name="analyse_button">Auswerten</string>

    <!-- Strings related to login -->
    <string name="prompt_server">Server</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-Mail-Adresse ungültig</string>
    <string name="error_invalid_login">Login ungültig!</string>
    <string name="error_invalid_password">Passwort zu kurz</string>
    <string name="error_incorrect_password">Passwort falsch</string>
    <string name="error_field_required">Pflichtfeld</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save_email">Email-Adresse speichern?</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Settings -->
    <string name="save">speichern</string>
    <string name="theme_color">Primärfarbe</string>
    <string name="store_name">Geschäftsname</string>
    <string name="color_dialog_title">Farbauswahl</string>
    <string name="change_password">Passwort ändern</string>

</resources>
