<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_tables"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/nav_tables" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_products" />
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
