<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ninja.oliverwerner.kassensystem_v12.TableActivity"
    tools:showIn="@layout/app_bar_table">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="59dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pay_Button"
            android:gravity="center"
            android:text="@string/pay_button"/>
        <Switch
            android:text="@string/plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_minus_pay"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/EnterPays_PaysList"
            android:layout_toRightOf="@+id/EnterPays_addAtomPayment"
            android:layout_weight="0.08" />
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/all_Button"
            android:gravity="center"
            android:text="@string/all_selected" />
        <TextView

            android:text="0,00"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sum_price"
            android:textSize="25sp"
            android:gravity="right"
            android:layout_weight="1.00" />
        <TextView
            android:text="@string/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/currency"
            android:textSize="25sp"
            android:gravity="left"
            android:layout_weight="1.00" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvPaymentProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>
