<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ninja.oliverwerner.kassensystem_v12.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/main_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_table"
                android:layout_weight="1" />

            <Button
                android:text="@string/main_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_product"
                android:layout_weight="1" />

            <Button
                android:text="@string/main_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_settings"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/emty_text"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/main_value"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/headline_value"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/main_price"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/headline_price"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/day"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/day_text"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/day_value"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/day_price"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/LinearLayout">

                <TextView
                    android:text="@string/month"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/month_text"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/month_value"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/month_price"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/year"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/year_text"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/year_value"
                    android:layout_weight="1" />

                <TextView
                    android:text="TextView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/year_price"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edit_year"
                    android:layout_weight="1"
                    android:hint="Year"
                    android:maxLength="4"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_month"
                    android:layout_weight="1"
                    android:hint="Month"
                    android:maxLength="2"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_day"
                    android:layout_weight="1"
                    android:hint="Day"
                    android:maxLength="2"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="54dp">

                <Button
                    android:id="@+id/calculate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:text="@string/analyse_button" />

                <TextView
                    android:text="order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_value"
                    android:layout_weight="1" />

                <TextView
                    android:text="receipts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_price"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
